--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.16",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
