--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.16",
     "yup": "^1.6.1"
   },
